# advent-of-code

./: .gitignore  README.md  pyproject.toml
advent/: day1.py
advent/twentythree/: day1.py  day2.py  day3.py  day4.py  day5.py
advent/twentytwentyfive/: day1.py  day2.py  day3.py
tests/2023/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py
tests/twentyseventeen/: test_day1.py
tests/twentytwentyfive/: test_day1.py  test_day2.py  test_day3.py
