[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["manipayet <mani.payet@lyst.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
setuptools = "^69.0.2"
distribute = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
